<resources>
    <string name="app_name">appBar</string>
    <string name="filter_food_name">食物名稱</string>
    <string name="text_filter_date">到期燈號</string>
    <string name="text_filter_category">食物種類</string>
    <string name="text_for_red_chip">兩天內到期</string>
    <string name="text_for_yellow_chip">一周內到期</string>
    <string name="text_for_green_chip">保存期限超過一周</string>
    <string name="name1">name1</string>
    <string name="category1">category1</string>
    <string name="text_filter_title" >篩選清單</string>
</resources>